@@ -1,3 +1,9 @@
+2009-04-02  Gordon Williams  <gordon.williams@collabora.co.uk>
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: More fixes for
+	  g_object_unref - deal with weak reference on clutter
+	  actors.
+
 2009-04-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.28
